Refactor message handling: update Message class to use sender IP, enhance MessageHistory for IP-based user management, and improve Chat components for consistent message rendering and state updates.